[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/ui/heart_pickup.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/heartpickup.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 16 ), Rect2( 16, 0, 16, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.19345
height = 0.530537

[node name="heartpickup" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "heart"
anims/heart = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.486103, 0.555542 )
shape = SubResource( 2 )

[node name="pickupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_heartpickup_body_entered"]
[connection signal="timeout" from="pickupTimer" to="." method="_on_pickupTimer_timeout"]
